--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <select name="theme" id="theme">
+    <select name="theme" id="theme" onchange="show()">
         <option disabled selected="selected">Выберите тему</option>
         <option value="black">Тёмная</option>
         <option value="white">Светлая</option>
-        <option value="cream">Приглушённая</option>
+        <option value="cream">Яркая</option>
     </select>
-        <img src="" alt="" id="catImage" width="300">
+    <h1>Страничка</h1>
 
     <script src="index.js"></script>
 </body>
